# InventoryService/cmd/docs/swagger.json
@@ -106,7 +106,12 @@
                 "parameters": [
                     {
                         "type": "number",
-                        "name": "alcohol",
+                        "name": "alcoholmax",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "name": "alcoholmin",
                         "in": "query"
                     },
                     {
